--- a/views/layout/layout.templ
+++ b/views/layout/layout.templ
@@ -2,7 +2,7 @@ package layout
 
 templ Layout(title string, body templ.Component) {
 	<!DOCTYPE html>
-	<html lang="en">
+	<html lang="en" data-bs-theme="dark">
 		<head>
 			<meta charset="utf-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
