--- a/views/layout/sidebar.templ
+++ b/views/layout/sidebar.templ
@@ -1,7 +1,7 @@
 package layout
 
 templ sidebar() {
-	<div class="d-flex flex-sm-column flex-row flex-nowrap bg-body-tertiary">
+	<div class="d-flex flex-sm-column flex-row flex-nowrap">
 		<a
 			href="/"
 			class="d-block p-3 link-body-emphasis text-decoration-none"
