--- a/views/layout/layout.templ
+++ b/views/layout/layout.templ
@@ -19,45 +19,7 @@ templ Layout(title string, body templ.Component, extraCss templ.Component, extra
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-sm-auto sticky-top  bg-body-tertiary ps-0 pe-0 m-0 shadow">
-						<div class="d-flex flex-sm-column flex-row flex-nowrap bg-body-tertiary">
-							<a
-								href="/"
-								class="d-block p-3 link-body-emphasis text-decoration-none"
-								title=""
-								data-bs-toggle="tooltip"
-								data-bs-placement="right"
-								data-bs-original-title="Icon-only"
-							>
-								<i class="bi-bootstrap fs-1"></i>
-							</a>
-							<ul class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto  text-center ">
-								<li class="nav-item">
-									<a href="#" class="nav-link py-3 px-2 rounded-0" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Home">
-										<i class="bi-house fs-1"></i>
-									</a>
-								</li>
-								<li class="nav-item">
-									<a href="#" class="nav-link py-3 px-2  rounded-0" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Dashboard">
-										<i class="bi-speedometer2 fs-1"></i>
-									</a>
-								</li>
-								<li class="nav-item">
-									<a href="#" class="nav-link py-3 px-2  rounded-0" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Orders">
-										<i class="bi-table fs-1"></i>
-									</a>
-								</li>
-								<li class="nav-item ">
-									<a href="#" class="nav-link active py-3  px-2  rounded-0" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Products">
-										<i class="bi-heart fs-1"></i>
-									</a>
-								</li>
-								<li class="nav-item">
-									<a href="#" class="nav-link py-3 px-2  rounded-0" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Customers">
-										<i class="bi-people fs-1"></i>
-									</a>
-								</li>
-							</ul>
-						</div>
+						@sidebar()
 					</div>
 					<div class="col-sm p-3   min-vh-100">
 						@body
