--- a/views/layout/layout.templ
+++ b/views/layout/layout.templ
@@ -31,6 +31,7 @@ templ Layout(title string, href string, body templ.Component, extraCss templ.Com
 				</div>
 			</div>
 			<script src="/assets/js/bootstrap.min.js"></script>
+			<script src="/assets/js/app.js"></script>
 			if extraJs != nil {
 				@extraJs
 			}
