--- a/views/layout/layout.templ
+++ b/views/layout/layout.templ
@@ -14,6 +14,7 @@ templ Layout(title string, href string, body templ.Component, extraCss templ.Com
 				{ utils.T(ctx,title) }
 			</title>
 			<link href="/assets/css/bootstrap.min.css" rel="stylesheet"/>
+			<link href="/assets/css/app.css" rel="stylesheet"/>
 			<link rel="stylesheet" href="/assets/css/bootstrap-icon.min.css"/>
 			if extraCss != nil {
 				@extraCss
@@ -32,7 +33,7 @@ templ Layout(title string, href string, body templ.Component, extraCss templ.Com
 				</div>
 			</div>
 			<script src="/assets/js/bootstrap.min.js"></script>
-			<script src="/assets/js/app.js"></script>
+			<script src="/assets/js/common.js"></script>
 			if len(extraJs) != 0 {
 				for _,js := range extraJs {
 					@js
